--- a/style.css
+++ b/style.css
@@ -1,28 +1,324 @@
 body,
 html {
   margin: 0;
+  background-image: url("pink.jpg");
 }
-.box {
-  color: red;
-  font-size: 20px;
-  width: 20vw;
-  height: 20vh;
+
+:root {
+  --soft-pink: rgb(245, 215, 217);
+  --pink: rgb(248, 216, 218);
+  --primary: #fff;
+  --bg-color: rgb(5, 53, 61);
+  --bg-envelope-color: #f5edd1;
+  --envelope-tab: #ecdeb8;
+  --envelope-cover: #e6cfa7;
+  --shadow-color: rgba(0, 0, 0, 0.2);
+  --txt-color: #444;
+  --heart-color: rgb(252, 8, 231);
+  --pink2: rgb(255, 143, 163);
 }
-.box li {
-  margin: 20px;
+header {
+  border: 2px solid rgb(44, 45, 45);
+  /* background-image: url("ghibli1.jpg"); */
+  background-color: var(--soft-pink);
+  background-size: cover;
+  background-position-y: -100px;
+  height: 300px;
+  margin-top: 0px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background-repeat: no-repeat;
+  margin: 10px;
+  clip-path: polygon(50% 0%, 0% 100%, 100% 100%);
+  border-radius: 20px;
+}
+
+.content {
+  /* background-image: url("color.jpg"); */
+  background-color: var(--soft-pink);
+  display: flex;
+  justify-content: space-between;
+  height: 700px;
+  box-sizing: border-box;
+  background-clip: border-box;
+  padding: 25px;
+  flex: 1;
+  margin-top: 10px;
   border: 2px solid black;
+  margin: 10px;
+  border-radius: 20px;
+}
+.content_left {
+  width: 70vw;
+  display: flex;
+  box-sizing: border-box;
+  margin: 10px;
+  background-color: #faecd1;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
+  line-height: 60px;
+  font-weight: 15px;
+  font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
+  /* border: 3px solid var(--pink2); */
+  /* border-radius: 20px; */
+  color: #800f2f;
+  border: 10px solid white;
+  border-radius: 20px;
+}
+
+.content_left .letter img {
+  max-width: 150%;
+  opacity: 1;
+  position: relative;
+  right: 20px;
+  top: -270px;
+}
+
+p {
+  display: flex;
+  font-size: 45px;
+  justify-content: center;
+  align-content: center;
+  align-items: center;
+  padding-left: 80px;
+}
+
+.valentines-day-card {
+  background-size: cover;
+  position: relative;
+  width: 400px;
+  height: 300px;
+  background-color: #ff8fa3;
+  overflow: hidden;
+  border: 10px solid white;
+  border-radius: 10px;
+  box-shadow: 0 0 100px rgba(255, 0, 0, 0.2);
+}
+
+.valentines-day-card:before {
+  content: "";
+  position: absolute;
+  background-color: #ffb3c1;
+  width: 100px;
+  height: 100px;
   border-radius: 50%;
-  padding: 20px;
+  top: 140px;
+  left: -25px;
+  box-shadow: 60px 20px #ffb3c1, 130px 10px #ffb3c1, 190px 20px #ffb3c1,
+    260px -5px #ffb3c1, 340px 20px #ffb3c1;
 }
-.box li:first-child {
+
+.valentines-day-card:after {
+  content: "";
+  position: absolute;
+  background-color: #ffccd5;
+  width: 100px;
+  height: 100px;
+  border-radius: 50%;
+  top: 160px;
+  left: -40px;
+  box-shadow: 50px 20px #ffccd5, 120px 40px #ffccd5, 200px 15px #ffccd5,
+    260px 30px #ffccd5, 330px 30px #ffccd5, 380px 10px #ffccd5;
+}
+
+.clouds {
+  position: absolute;
+  width: 100px;
+  height: 100px;
+  border-radius: 50%;
+  background-color: #fff0f3;
+  z-index: 5;
+  top: 210px;
+  left: -20px;
+  box-shadow: 55px 30px #fff0f3, 125px 10px #fff0f3, 175px 20px #fff0f3,
+    250px 10px #fff0f3, 320px 5px #fff0f3, 380px 10px #fff0f3;
+}
+
+.hearts {
+  position: absolute;
+  z-index: 2;
+}
+
+.heartOne {
+  position: absolute;
+  left: 100px;
+  top: 250px;
+  animation: up 4s linear forwards 1s;
+}
+
+.heartTwo {
+  position: absolute;
+  left: 270px;
+  top: 230px;
+  animation: up 5s linear forwards 1.8s;
+}
+
+.heartThree {
+  position: absolute;
+  left: 85px;
+  top: 415px;
+  animation: up 5s linear forwards 3s;
+}
+
+.heartFour {
+  position: absolute;
+  left: 320px;
+  top: 380px;
+  animation: upTwo 9s linear infinite 3.5s;
+}
+
+.heartFive {
+  position: absolute;
+  left: 150px;
+  top: 400px;
+  animation: upTwo 13s linear infinite 4.5s;
+}
+
+.right-side:before,
+.right-side:after {
+  position: absolute;
+  content: "";
+  transform-origin: left;
+  animation: move 1s ease infinite;
+}
+
+.right-side:before {
+  border-radius: 50% 50% 50% 0;
+  width: 21px;
+  height: 20px;
+  background-color: #c9184a;
+  left: -0.26px;
+}
+
+.right-side:after {
+  height: 0;
+  width: 0;
+  border-bottom: 10px solid transparent;
+  border-left: 15px solid #c9184a;
+  top: 19px;
+  left: -0.26px;
+}
+
+@keyframes move {
+  0%,
+  100% {
+    transform: rotateY(0);
+  }
+  50% {
+    transform: rotateY(-45deg);
+  }
+}
+
+.left-side:before,
+.left-side:after {
+  position: absolute;
+  content: "";
+  transform-origin: right;
+  animation: move 1s ease infinite;
+}
+
+.left-side:before {
+  border-radius: 50% 50% 0 50%;
+  width: 20px;
+  height: 20px;
+  left: -20.7px;
+  background-color: #ff4d6d;
+}
+
+.left-side:after {
+  height: 0;
+  width: 0;
+  left: -15px;
+  border-bottom: 10px solid transparent;
+  border-right: 15px solid #ff4d6d;
+  top: 19px;
+}
+@keyframes up {
+  0% {
+    transform: translateY(0);
+  }
+  100% {
+    transform: translateY(-200px);
+  }
+}
+
+@keyframes up1 {
+  0% {
+    transform: translateY(0);
+  }
+  100% {
+    transform: translateY(-310px);
+  }
+}
+
+@keyframes upTwo {
+  0% {
+    transform: translateY(0);
+  }
+  100% {
+    transform: translateY(-450px);
+  }
+}
+
+.text {
+  position: absolute;
+  color: #800f2f;
+  font-size: 55px;
+  font-family: "Pacifico", cursive;
+  line-height: 1;
+  text-align: center;
+  width: 380px;
+  left: 10px;
+  z-index: 3;
+  top: 360px;
+  animation: up1 1s ease forwards;
+  transition: 0.2s;
+}
+
+.hover {
+  color: white;
+  font-family: "Pacifico", cursive;
+  text-align: center;
+}
+
+.content_right {
+  display: flex;
+  flex-direction: column;
+  flex: 1;
+  margin-left: 25px;
+  justify-content: space-between;
+}
+
+.content_up {
+  border: 10px solid white;
   background-color: green;
-  color: green;
+  background-image: url("minh\ le.JPG");
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: 500px;
+  background-clip: border-box;
+  flex: 1;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  /* margin-bottom: 20px; */
+  box-sizing: border-box;
+  border-radius: 5%;
+  margin-bottom: 10px;
 }
-.box li:first-child::selection {
-  background-color: red;
-  border-style: 10px dashed #999;
-  color: green;
-}
-.box li:last-child {
-  color: orange;
+/* width: 70vw;
+display: flex;
+align-items: center;
+justify-content: center;
+background-color: var(--pink);
+border-radius: 5%; */
+.content_down {
+  /* width: 70vw; */
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  background-color: var(--pink);
+  border-radius: 5%;
 }
